--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,6 +1,19 @@
 <div class="container mt-5">
-    <div class="card text-center" style="padding: 20px; color: red;">
-        <h1>You are User</h1>
-        <h1>{{message}}</h1>
+  <div class="card text-center" style="padding: 20px; color: #00d0d0">
+    <h1>
+      Hello, Welcome to the
+      <img
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRFRaU_AFZIqHkeaQlfbMc3NVJGk7aQKO4E7h9Nrea73fk-cI_OXFMFPqB1yqHm_tiGDzw&usqp=CAU"
+        alt="E-commerce Image"
+        style="max-width: 100%; height: 60px"
+      />
+    </h1>
+    <div class="text-center">
+      <img
+        src="https://ediacademy.com/blog/wp-content/uploads/2019/02/veravalonline-ecommerce.png"
+        alt="E-commerce Image"
+        style="max-width: 100%; height: auto"
+      />
     </div>
+  </div>
 </div>
