--- a/src/app/add-new-product/add-new-product.component.html
+++ b/src/app/add-new-product/add-new-product.component.html
@@ -1,103 +1,126 @@
 <div class="container mt-5">
-    <div class="card p-2">
+  <div style="display: flex; justify-content: center">
+    <img
+      src="assets/image7.png"
+      alt="Image Description"
+      style="width: 200px; max-height: 250px; padding-bottom: 25px"
+    />
+  </div>
+  <div class="card p-2">
+    <div class="row">
+      <div class="col-6">
+        <form #productForm="ngForm" (ngSubmit)="addProduct(productForm)">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>
+              <span style="color: darkorchid"> Product Name </span>
+            </mat-label>
+            <input
+              matInput
+              placeholder="Product Name"
+              [(ngModel)]="product.productName"
+              name="productName"
+            />
+          </mat-form-field>
 
-        <div class="row">
-            <div class="col-6">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>
+              <span style="color: darkorchid">Product Description</span>
+            </mat-label>
+            <input
+              matInput
+              placeholder="Product Description"
+              [(ngModel)]="product.productDescription"
+              name="productDescription"
+            />
+          </mat-form-field>
 
-                <form #productForm="ngForm"
-                      (ngSubmit)="addProduct(productForm)">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>
+              <span style="color: darkorchid">Product Actual Price</span>
+            </mat-label>
+            <input
+              matInput
+              placeholder="Product Actual Price"
+              [(ngModel)]="product.productActualPrice"
+              name="productActualPrice"
+            />
+          </mat-form-field>
 
-                    <mat-form-field appearance="outline"
-                                    class="w-100">
-                        <mat-label>Product Name</mat-label>
-                        <input matInput
-                               placeholder="Product Name"
-                               [(ngModel)]="product.productName"
-                               name="productName">
-                    </mat-form-field>
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>
+              <span style="color: darkorchid">Product Discounted Price</span>
+            </mat-label>
+            <input
+              matInput
+              placeholder="Product Discounted Price"
+              [(ngModel)]="product.productDiscountedPrice"
+              name="productDiscountedPrice"
+            />
+          </mat-form-field>
 
-                    <mat-form-field appearance="outline"
-                                    class="w-100">
-                        <mat-label>Product Description</mat-label>
-                        <input matInput
-                               placeholder="Product Description"
-                               [(ngModel)]="product.productDescription"
-                               name="productDescription">
-                    </mat-form-field>
-
-                    <mat-form-field appearance="outline"
-                                    class="w-100">
-                        <mat-label>Product Actual Price</mat-label>
-                        <input matInput
-                               placeholder="Product Actual Price"
-                               [(ngModel)]="product.productActualPrice"
-                               name="productActualPrice">
-                    </mat-form-field>
-
-                    <mat-form-field appearance="outline"
-                                    class="w-100">
-                        <mat-label>Product Discounted Price</mat-label>
-                        <input matInput
-                               placeholder="Product Discounted Price"
-                               [(ngModel)]="product.productDiscountedPrice"
-                               name="productDiscountedPrice">
-                    </mat-form-field>
-
-                    <div align="end">
-                        <button mat-stroked-button
-                                color="primary"
-                                style="margin-right: 3px;">Clear</button>
-                        <button type="submit" *ngIf="isNewProduct"
-                                mat-stroked-button
-                                color="primary">Add Product</button>
-                        <button type="submit" *ngIf="!isNewProduct"
-                                mat-stroked-button
-                                color="primary">Update Product</button>
-                    </div>
-
-                </form>
-
+          <div align="end">
+            <button
+              mat-stroked-button
+              style="margin-right: 3px; background-color: #590577"
+            >
+              <span style="color: white">Clear</span>
+            </button>
+            <button
+              type="submit"
+              *ngIf="isNewProduct"
+              mat-stroked-button
+              style="background-color: #590577"
+            >
+              <span style="color: white">Add Product</span>
+            </button>
+            <button
+              type="submit"
+              *ngIf="!isNewProduct"
+              mat-stroked-button
+              style="background-color: #590577"
+            >
+              <span style="color: white">Update Product</span>
+            </button>
+          </div>
+        </form>
+      </div>
+      <div class="col-6">
+        <div>
+          <div class="dropzone" appDrag (files)="fileDropped($event)">
+            <div class="text-wrapper">
+              <div class="centered" style="color: #590577">
+                Drag and drop your file or
+                <a (click)="selectFile.click()" class="browse-button">browse</a>
+                a file
+              </div>
             </div>
-            <div class="col-6">
-                <div>
-                    <div class="dropzone"
-                         appDrag
-                         (files)="fileDropped($event)">
-                        <div class="text-wrapper">
-                            <div class="centered">
-                                Drag and drop your file or
-                                <a (click)="selectFile.click()"
-                                   class="browse-button">browse</a>
-                                a file
-                            </div>
-
-                        </div>
-                    </div>
-                    <input multiple
-                           type="file"
-                           style="display: none;"
-                           #selectFile
-                           value="select"
-                           (change)="onFileSelected($event)">
-                </div>
-                <div class="mt-5">
-                    <div class="row">
-                        <mat-grid-list cols="4"
-                                       rowHeight="1:1">
-                            <mat-grid-tile *ngFor="let file of product.productImages; let i = index;">
-                                <div style="position: relative">
-                                    <span class="btn-remove-image"
-                                          (click)="removeImages(i)">x</span>
-                                    <img [src]="file.url"
-                                         width="100px"
-                                         height="100px">
-                                </div>
-                            </mat-grid-tile>
-                        </mat-grid-list>
-                    </div>
-                </div>
-            </div>
+          </div>
+          <input
+            multiple
+            type="file"
+            style="display: none"
+            #selectFile
+            value="select"
+            (change)="onFileSelected($event)"
+          />
         </div>
-
+        <div class="mt-5">
+          <div class="row">
+            <mat-grid-list cols="4" rowHeight="1:1">
+              <mat-grid-tile
+                *ngFor="let file of product.productImages; let i = index"
+              >
+                <div style="position: relative">
+                  <span class="btn-remove-image" (click)="removeImages(i)"
+                    >x</span
+                  >
+                  <img [src]="file.url" width="100px" height="100px" />
+                </div>
+              </mat-grid-tile>
+            </mat-grid-list>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
