--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,5 +1,12 @@
 <div class="container mt-5">
-    <div class="card text-center" style="color: green; padding: 20px;">
-        <h1>You are Admin</h1>
+  <div class="card text-center" style="color: green; padding: 20px">
+    <h1>Admin Profile</h1>
+    <div style="display: flex; justify-content: center">
+      <img
+        src="assets/image6.png"
+        alt="Image Description"
+        style="width: 400px; max-height: 350px"
+      />
     </div>
+  </div>
 </div>
