--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,51 +1,76 @@
 <div class="container mt-5">
-    <div align="right" class="mb-3">
-        <button (click)="checkout()" color="primary" mat-raised-button>Checkout</button>
+  <div class="image-container">
+    <div style="display: flex; justify-content: center">
+      <img
+        src="assets/imge.png.png"
+        alt="Image Description"
+        style="width: 60%; max-height: 350px"
+      />
     </div>
-    <table mat-table
-           [dataSource]="cartDetails"
-           class="mat-elevation-z8">
+  </div>
+  <div align="right" class="mb-3">
+    <button
+      (click)="checkout()"
+      style="background-color: #590577"
+      mat-raised-button
+    >
+      <span style="color: white">Checkout</span>
+    </button>
+  </div>
+  <table mat-table [dataSource]="cartDetails" class="mat-elevation-z8">
+    <ng-container matColumnDef="Name">
+      <th mat-header-cell *matHeaderCellDef>
+        <span style="color: #590577; font-size: 16px">Name</span>
+      </th>
 
-        <ng-container matColumnDef="Name">
-            <th mat-header-cell
-                *matHeaderCellDef> Name </th>
-            <td mat-cell
-                *matCellDef="let element"> {{element.product.productName}} </td>
-        </ng-container>
+      <td mat-cell *matCellDef="let element">
+        {{ element.product.productName }}
+      </td>
+    </ng-container>
 
-        <ng-container matColumnDef="Description">
-            <th mat-header-cell
-                *matHeaderCellDef> Description </th>
-            <td mat-cell
-                *matCellDef="let element"> {{element.product.productDescription}} </td>
-        </ng-container>
+    <ng-container matColumnDef="Description">
+      <th mat-header-cell *matHeaderCellDef>
+        <span style="color: #590577; font-size: 16px">Description</span>
+      </th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.product.productDescription }}
+      </td>
+    </ng-container>
 
-        <ng-container matColumnDef="Price">
-            <th mat-header-cell
-                *matHeaderCellDef> Price </th>
-            <td mat-cell
-                *matCellDef="let element"> {{element.product.productActualPrice}} </td>
-        </ng-container>
+    <ng-container matColumnDef="Price">
+      <th mat-header-cell *matHeaderCellDef>
+        <span style="color: #590577; font-size: 16px">Price </span>
+      </th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.product.productActualPrice }}
+      </td>
+    </ng-container>
 
-        <ng-container matColumnDef="Discounted Price">
-            <th mat-header-cell
-                *matHeaderCellDef> Discounted Price </th>
-            <td mat-cell
-                *matCellDef="let element"> {{element.product.productDiscountedPrice}} </td>
-        </ng-container>
+    <ng-container matColumnDef="Discounted Price">
+      <th mat-header-cell *matHeaderCellDef>
+        <span style="color: #590577; font-size: 16px">Discounted Price </span>
+      </th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.product.productDiscountedPrice }}
+      </td>
+    </ng-container>
 
-        <ng-container matColumnDef="Action">
-            <th mat-header-cell
-                *matHeaderCellDef> Action </th>
-            <td mat-cell
-                *matCellDef="let element"> 
-                <button mat-raised-button color="warn" (click)="delete(element.cartId)">Delete</button>
-            </td>
-        </ng-container>
+    <ng-container matColumnDef="Action">
+      <th mat-header-cell *matHeaderCellDef>
+        <span style="color: #590577; font-size: 16px">Action </span>
+      </th>
+      <td mat-cell *matCellDef="let element">
+        <button
+          mat-raised-button
+          style="background-color: #590577"
+          (click)="delete(element.cartId)"
+        >
+          <span style="color: white">Delete</span>
+        </button>
+      </td>
+    </ng-container>
 
-        <tr mat-header-row
-            *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row
-            *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
 </div>
