--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,36 +1,61 @@
 <div class="container mt-5">
-    <div class="card" style="padding: 20px;">
-        <form #loginForm="ngForm" (ngSubmit)="login(loginForm)">
+  <div style="display: flex; justify-content: center">
+    <img
+      src="assets/image4.png"
+      alt="Image Description"
+      style="width: 300px; max-height: 550px"
+    />
+  </div>
+  <div class="card" style="padding: 20px">
+    <form #loginForm="ngForm" (ngSubmit)="login(loginForm)">
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label style="color: darkorchid">Username</mat-label>
+        <input
+          matInput
+          ngModel
+          name="userName"
+          id="userName"
+          placeholder="Username"
+        />
+        <mat-hint>
+          <span style="color: darkorchid">Username</span>
+        </mat-hint>
+      </mat-form-field>
 
-            <mat-form-field appearance="outline" class="w-100">
-                <mat-label>Username</mat-label>
-                <input matInput
-                       ngModel
-                       name="userName"
-                       id="userName"
-                       placeholder="Username">
-                <mat-hint>Username</mat-hint>
-            </mat-form-field>
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label style="color: darkorchid">Password</mat-label>
+        <input
+          type="password"
+          matInput
+          ngModel
+          name="userPassword"
+          id="userPassword"
+          placeholder="Password"
+        />
+        <mat-hint>
+          <span style="color: darkorchid">Password</span>
+        </mat-hint>
+      </mat-form-field>
 
-            <mat-form-field appearance="outline" class="w-100">
-                <mat-label>Password</mat-label>
-                <input type="password"
-                    matInput
-                       ngModel
-                       name="userPassword"
-                       id="userPassword"
-                       placeholder="Password">
-                <mat-hint>Password</mat-hint>
-            </mat-form-field>
-
-            <button class="w-100" type="submit" mat-raised-button color="primary">Login</button>
-        </form>
-
-        
-    </div>
-    <div class="text-center">
-        <br>
-        <button class="w-20" mat-raised-button type="button" (click)="registerUser()">Create an account</button>
-    </div>
-        
+      <button
+        class="w-100"
+        type="submit"
+        mat-raised-button
+        style="background-color: #590577"
+      >
+        <span style="color: white">Login</span>
+      </button>
+    </form>
+  </div>
+  <div class="text-center">
+    <br />
+    <button
+      class="w-20"
+      mat-raised-button
+      type="button"
+      (click)="registerUser()"
+    >
+      <span style="color: darkorchid">Create an Account</span>
+    </button>
+  </div>
 </div>
