--- a/src/app/my-orders/my-orders.component.html
+++ b/src/app/my-orders/my-orders.component.html
@@ -1,47 +1,61 @@
 <div class="container mt-5">
-    <table mat-table
-           [dataSource]="myOrderDetails"
-           class="mat-elevation-z8">
+  <div style="display: flex; justify-content: center">
+    <img
+      src="assets/image3.png"
+      alt="Image Description"
+      style="width: 60%; max-height: 350px"
+    />
+  </div>
+  <div class="text-center mt-3" style="padding-bottom: 25px">
+    <a
+      href="http://localhost/wordpress/"
+      target="_blank"
+      style="font-size: 20px"
+    >
+      Follow this link to trace your package by entering the Order ID
+    </a>
+  </div>
+  <table mat-table [dataSource]="myOrderDetails" class="mat-elevation-z8">
+    <ng-container matColumnDef="Name">
+      <th mat-header-cell *matHeaderCellDef>
+        <span style="color: #590577; font-size: 16px">Name</span>
+      </th>
+      <td mat-cell *matCellDef="let element">{{ element.orderFullName }}</td>
+    </ng-container>
 
-        <ng-container matColumnDef="Name">
-            <th mat-header-cell
-                *matHeaderCellDef> Name </th>
-            <td mat-cell
-                *matCellDef="let element"> {{element.orderFullName}} </td>
-        </ng-container>
+    <ng-container matColumnDef="Address">
+      <th mat-header-cell *matHeaderCellDef>
+        <span style="color: #590577; font-size: 16px">Address </span>
+      </th>
+      <td mat-cell *matCellDef="let element">{{ element.orderFullOrder }}</td>
+    </ng-container>
 
-        <ng-container matColumnDef="Address">
-            <th mat-header-cell
-                *matHeaderCellDef> Address </th>
-            <td mat-cell
-                *matCellDef="let element"> {{element.orderFullOrder}} </td>
-        </ng-container>
+    <ng-container matColumnDef="Contact No.">
+      <th mat-header-cell *matHeaderCellDef>
+        <span style="color: #590577; font-size: 16px">Contact No.</span>
+      </th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.orderContactNumber }}
+      </td>
+    </ng-container>
 
-        <ng-container matColumnDef="Contact No.">
-            <th mat-header-cell
-                *matHeaderCellDef> Contact No. </th>
-            <td mat-cell
-                *matCellDef="let element"> {{element.orderContactNumber}} </td>
-        </ng-container>
+    <ng-container matColumnDef="Amount">
+      <th mat-header-cell *matHeaderCellDef>
+        <span style="color: #590577; font-size: 16px">Amount </span>
+      </th>
+      <td mat-cell *matCellDef="let element">{{ element.orderAmount }}</td>
+    </ng-container>
 
-        <ng-container matColumnDef="Amount">
-            <th mat-header-cell
-                *matHeaderCellDef> Amount </th>
-            <td mat-cell
-                *matCellDef="let element"> {{element.orderAmount}} </td>
-        </ng-container>
+    <ng-container matColumnDef="Status">
+      <th mat-header-cell *matHeaderCellDef>
+        <span style="color: #590577; font-size: 16px">Status </span>
+      </th>
+      <td mat-cell *matCellDef="let element; &quot;font-size&quot;: 16; px">
+        {{ element.orderStatus }}
+      </td>
+    </ng-container>
 
-        <ng-container matColumnDef="Status">
-            <th mat-header-cell
-                *matHeaderCellDef> Status </th>
-            <td mat-cell
-                *matCellDef="let element"> {{element.orderStatus}} </td>
-        </ng-container>
-
-
-        <tr mat-header-row
-            *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row
-            *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
 </div>
