--- a/src/app/order-confirmation/order-confirmation.component.html
+++ b/src/app/order-confirmation/order-confirmation.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-5">
     <div class="card p-5 text-center">
-       <h1>Your order is place successfully. It will get delivered to you within 4-5 business days.</h1>
+       <h1 style="color: #590577">Your order is place successfully. It will get delivered to you within 4-5 business days.</h1>
     </div>
 </div>
