--- a/src/app/order-details/order-details.component.html
+++ b/src/app/order-details/order-details.component.html
@@ -1,56 +1,94 @@
 <div class="container mt-5">
-  <mat-button-toggle-group  aria-label="Font Style">
-    <mat-button-toggle value="All" (click)="getAllOrderDetailsForAdmin('All')">All</mat-button-toggle>
-    <mat-button-toggle value="Placed" (click)="getAllOrderDetailsForAdmin('Placed')">Placed</mat-button-toggle>
-    <mat-button-toggle value="Delivered" (click)="getAllOrderDetailsForAdmin('Delivered')" >Delivered</mat-button-toggle>
+  <mat-button-toggle-group aria-label="Font Style">
+    <mat-button-toggle value="All" (click)="getAllOrderDetailsForAdmin('All')">
+      <span style="color: #590577; font-size: 16px">All</span>
+    </mat-button-toggle>
+    <mat-button-toggle
+      value="Placed"
+      (click)="getAllOrderDetailsForAdmin('Placed')"
+    >
+      <span style="color: #590577; font-size: 16px">Placed</span>
+    </mat-button-toggle>
+    <mat-button-toggle
+      value="Delivered"
+      (click)="getAllOrderDetailsForAdmin('Delivered')"
+    >
+      <span style="color: #590577; font-size: 16px">Delivered</span>
+    </mat-button-toggle>
   </mat-button-toggle-group>
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 mt-3">
-
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 mt-3">
     <ng-container matColumnDef="Id">
-      <th mat-header-cell *matHeaderCellDef> Id </th>
-      <td mat-cell *matCellDef="let element"> {{element.orderId}} </td>
+      <th mat-header-cell *matHeaderCellDef>
+        <span style="color: #590577; font-size: 16px">Id </span>
+      </th>
+      <td mat-cell *matCellDef="let element">{{ element.orderId }}</td>
     </ng-container>
-  
+
     <!-- Product Name Column -->
     <ng-container matColumnDef="Product Name">
-      <th mat-header-cell *matHeaderCellDef> Product Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.product.productName}} </td>
-    </ng-container>
-  
-    <!-- Name Column -->
-    <ng-container matColumnDef="Name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.user.userFirstName}} </td>
-    </ng-container>
-  
-    <!-- Address Column -->
-    <ng-container matColumnDef="Address">
-      <th mat-header-cell *matHeaderCellDef> Address </th>
-      <td mat-cell *matCellDef="let element"> {{element.orderFullOrder}} </td>
-    </ng-container>
-
-     <!-- Contact No. Column -->
-     <ng-container matColumnDef="Contact No.">
-        <th mat-header-cell *matHeaderCellDef> Contact No. </th>
-        <td mat-cell *matCellDef="let element"> {{element.orderContactNumber}} </td>
-      </ng-container>
-
-       <!-- orderStatus Column -->
-     <ng-container matColumnDef="Status">
-        <th mat-header-cell *matHeaderCellDef> Status </th>
-        <td mat-cell *matCellDef="let element"> {{element.orderStatus}} </td>
-      </ng-container>
-
-       <!-- Action Column -->
-     <ng-container matColumnDef="Action">
-      <th mat-header-cell *matHeaderCellDef> Action </th>
-      <td mat-cell *matCellDef="let element"> 
-          <button *ngIf="element.orderStatus == 'Placed'" mat-raised-button color="primary" (click)="markAsDelivered(element.orderId)">Mark as Delivered</button>  
+      <th mat-header-cell *matHeaderCellDef>
+        <span style="color: #590577; font-size: 16px">Product Name </span>
+      </th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.product.productName }}
       </td>
     </ng-container>
-  
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="Name">
+      <th mat-header-cell *matHeaderCellDef>
+        <span style="color: #590577; font-size: 16px">Name </span>
+      </th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.user.userFirstName }}
+      </td>
+    </ng-container>
+
+    <!-- Address Column -->
+    <ng-container matColumnDef="Address">
+      <th mat-header-cell *matHeaderCellDef>
+        <span style="color: #590577; font-size: 16px">Address </span>
+      </th>
+      <td mat-cell *matCellDef="let element">{{ element.orderFullOrder }}</td>
+    </ng-container>
+
+    <!-- Contact No. Column -->
+    <ng-container matColumnDef="Contact No.">
+      <th mat-header-cell *matHeaderCellDef>
+        <span style="color: #590577; font-size: 16px">Contact No. </span>
+      </th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.orderContactNumber }}
+      </td>
+    </ng-container>
+
+    <!-- orderStatus Column -->
+    <ng-container matColumnDef="Status">
+      <th mat-header-cell *matHeaderCellDef>
+        <span style="color: #590577; font-size: 16px">Status </span>
+      </th>
+      <td mat-cell *matCellDef="let element">{{ element.orderStatus }}</td>
+    </ng-container>
+
+    <!-- Action Column -->
+    <ng-container matColumnDef="Action">
+      <th mat-header-cell *matHeaderCellDef>
+        <span style="color: #590577; font-size: 16px">Action </span>
+      </th>
+      <td mat-cell *matCellDef="let element">
+        <button
+          *ngIf="element.orderStatus == 'Placed'"
+          mat-raised-button
+          color="primary"
+          (click)="markAsDelivered(element.orderId)"
+        >
+          Mark as Delivered
+        </button>
+      </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>  
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
 </div>
