--- a/src/app/product-view-details/product-view-details.component.html
+++ b/src/app/product-view-details/product-view-details.component.html
@@ -1,39 +1,65 @@
 <div class="container mt-5">
+  <div class="row">
+    <div class="col-6">
+      <div class="card image-container p-3">
+        <img
+          [src]="product.productImages[selectedProductIndex].url"
+          class="product-zoom-image"
+        />
+      </div>
 
-    <div class="row">
-        <div class="col-6">
-
-            <div class="card image-container p-3">
-                <img [src]="product.productImages[selectedProductIndex].url" class="product-zoom-image">
-            </div>
-
-            <div class="mt-2">
-                <mat-grid-list cols="3" gutterSize="10" rowHeight="1:1">
-                    <mat-grid-tile *ngFor="let file of product.productImages; let i = index;" (click)="changeIndex(i)" style="border: 1px solid lightgrey; cursor: pointer;">
-                        <img [src]="file.url" height="100px" >
-                    </mat-grid-tile>
-                </mat-grid-list>
-            </div>
-           
-        </div>
-        <div class="col-6">
-            <div class="product-information">
-                <div class="mt-3">
-                    <h2>{{product.productName}}</h2>
-                </div>
-                <div class="mt-3">
-                    Description: <br>
-                    {{product.productDescription}}
-                </div>
-                <div class="mt-3">
-                    <b>Rs. {{product.productDiscountedPrice}}</b>&nbsp;&nbsp;<b style="text-decoration: line-through;">{{product.productActualPrice}}</b>
-                </div>
-                <div class="mt-5 text-center">
-                    <button mat-raised-button color="warn" style="width: 200px;" (click)="buyProduct(product.productId)"> Buy Now</button>
-                    &nbsp;
-                    <button mat-raised-button style="width: 200px;" (click)="addToCart(product.productId)">Add to Cart</button>
-                </div>
-            </div>
-        </div>
+      <div class="mt-2">
+        <mat-grid-list cols="3" gutterSize="10" rowHeight="1:1">
+          <mat-grid-tile
+            *ngFor="let file of product.productImages; let i = index"
+            (click)="changeIndex(i)"
+            style="border: 1px solid lightgrey; cursor: pointer"
+          >
+            <img [src]="file.url" height="100px" />
+          </mat-grid-tile>
+        </mat-grid-list>
+      </div>
     </div>
+    <div class="col-6">
+      <div class="product-information">
+        <div class="mt-3">
+          <h2 style="color: #590577">{{ product.productName }}</h2>
+        </div>
+        <div class="mt-3">
+          <span style="color: #590577">Description: </span>
+          <br />
+          <span style="color: #590577">{{ product.productDescription }}</span>
+        </div>
+        <div class="mt-3">
+          <b style="color: #590577"
+            >Rs.
+            <span style="color: #590577">{{
+              product.productDiscountedPrice
+            }}</span></b
+          >&nbsp;&nbsp;<b
+            style="text-decoration: line-through; color: #590577"
+            >{{ product.productActualPrice }}</b
+          >
+        </div>
+        <div class="mt-5 text-center">
+          <button
+            mat-raised-button
+            color="warn"
+            style="width: 200px; background-color: #590577"
+            (click)="buyProduct(product.productId)"
+          >
+            <span style="color: white">Buy Now</span>
+          </button>
+          &nbsp;
+          <button
+            mat-raised-button
+            style="width: 200px; background-color: #590577"
+            (click)="addToCart(product.productId)"
+          >
+            <span style="color: white">Add to Cart</span>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
